Message 2 & 3 compatibilization almost done